load("@rules_java//java:defs.bzl", "java_import")

java_import(
    name = "wpilibNewCommands",
    jars = ["@edu_wpi_first_wpilibnewcommands_wpilibnewcommands_java//jar:file"],
    visibility = ["//visibility:public"],
    deps = [
        "@bzlmodrio-allwpilib//libraries/cpp/cscore:jni",
        "@bzlmodrio-allwpilib//libraries/cpp/hal:jni",
        "@bzlmodrio-allwpilib//libraries/cpp/ntcore:jni",
        "@bzlmodrio-allwpilib//libraries/cpp/wpimath:jni",
        "@bzlmodrio-allwpilib//libraries/cpp/wpiutil:jni",
        "@bzlmodrio-allwpilib//libraries/java/annotations",
        "@bzlmodrio-allwpilib//libraries/java/cameraserver",
        "@bzlmodrio-allwpilib//libraries/java/cscore",
        "@bzlmodrio-allwpilib//libraries/java/hal",
        "@bzlmodrio-allwpilib//libraries/java/ntcore",
        "@bzlmodrio-allwpilib//libraries/java/wpilibj",
        "@bzlmodrio-allwpilib//libraries/java/wpimath",
        "@bzlmodrio-allwpilib//libraries/java/wpiutil",
        "@bzlmodrio-opencv//libraries/cpp/opencv:jni",
    ],
)
