load("@rules_jvm_external//:defs.bzl", "artifact")

java_import(
    name = "wpimath",
    jars = ["@edu_wpi_first_wpimath_wpimath_java//jar:file"],
    visibility = ["//visibility:public"],
    deps = [
        "@bzlmodrio-allwpilib//libraries/cpp/wpimath:jni",
        "@bzlmodrio-allwpilib//libraries/cpp/wpiutil:jni",
        "@bzlmodrio-allwpilib//libraries/java/wpiutil",
        artifact("org.ejml:ejml-simple"),
    ],
)
