load("@rules_java//java:defs.bzl", "java_import")
load("@rules_jvm_external//:defs.bzl", "artifact")

java_import(
    name = "wpimath",
    jars = ["@edu_wpi_first_wpimath_wpimath_java//jar:file"],
    visibility = ["//visibility:public"],
    deps = [
        "@bzlmodrio-allwpilib//libraries/cpp/wpimath:jni",
        "@bzlmodrio-allwpilib//libraries/cpp/wpiutil:jni",
        "@bzlmodrio-allwpilib//libraries/java/wpiutil",
        artifact("com.fasterxml.jackson.core:jackson-annotations"),
        artifact("com.fasterxml.jackson.core:jackson-core"),
        artifact("com.fasterxml.jackson.core:jackson-databind"),
        artifact("org.ejml:ejml-simple"),
    ],
)
